[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "=1.29.1", features = ["full"] }
clap = { version = "4.4.18", features = ["derive"] }
rocky-rs = { path = "../" }
tonic = "0.10.2"
byte-unit = "5.1.4"
