[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[lib]
name = "monitor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-web-prom = "0.8.0"
anyhow = "1.0.80"
log = "0.4.20"
prometheus = "0.13.3"
tokio = { version = "1.36.0", features = ["full"] }
tonic = "0.11.0"
prost = "0.12.3"
clap = { version = "4.4.18", features = ["derive"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
env_logger = "0.11.2"
